# TANGO

./: .gitignore  .gitmodules  ContinuousControl.py  Dockerfile  Readme.md  auto_agent.py  docker-README.md  docker-compose.yml  environment.yml  exp.py  goal_control.py  index.html  learner.py  nav_parser.py  pyproject.toml  requirements.txt  runner.sh  teleop.py  teleop_habitat_pointnav_example.py  utils.py  utils_sim_traj.py
auto_agents/gnm/: utils.py
configs/: robohop.yaml  tango.yaml  tango_default.yaml
controllers/: robohop.py
data/: tango_multi_fast_run.mov
dataloader/: datasets_habitat.py
libs/: change.ipynb  utils.py  utils_goals.py
libs/belief_propagation/: example_bp.py  factor_graph.py
libs/commons/: utils.py  utils_data.py  utils_viz.py
libs/control/: goal_controller.py  pid.py  robohop.py  tango.py
libs/depth/: depth_anything_metric_model.py
libs/experiments/: model_loader.py  task_setup.py
libs/goal_generator/: goal_gen.py
libs/localizer/: loc_topo.py
libs/matcher/: lightglue.py
libs/path_finding/: graphs.py  path_finder.py  plot_utils.py
libs/planner_global/: plan_topo.py
libs/segmentor/: fast_sam_module.py  sam.py
misc/: plot_data_NVBurst.py  postProcExp.py  test_downsampling.py  test_vpr.py
misc/revisit_anything/: download_tokyo247_reference.sh  plotScript.py
misc/vladbuff/: aggregation.py  computeTime.sh  compute_time.py  salad.py
scripts/: check_vis_runs.py  create_maps.py  create_maps_gostanford.py  evaluate.py  hab_semantic_teleop.py  run_goal_control_demo.py
src/: utils.py
src/common/: __init__.py  third_party_model_loader.py  utils.py  utils_data.py  (+4 more)
tests/: test_RH_nav.ipynb  test_RH_skokloster.ipynb  test_generate_trajectory.py  test_gnm_agent.py
train/: model.py
(+14 files in other folders)
