[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tango"
version = "0.1.0"
description = "Minimal TANGO controller for ICRA demonstration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Stefan Podgorski", email = "your.email@example.com" },
    { name = "Sourav Garg", email = "your.email@example.com" },
    { name = "Lachlan Mares", email = "your.email@example.com" }
]
dependencies = [
    "torch",
    "numpy",
    "opencv-python",
    # add others as needed
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
