[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tango"
version = "0.1.0"
description = "Minimal TANGO controller for ICRA demonstration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Stefan Podgorski", email = "your.email@example.com" },
    { name = "Sourav Garg", email = "your.email@example.com" },
    { name = "Lachlan Mares", email = "your.email@example.com" }
]
dependencies = [
    "numpy>=1.25,<2",
    "opencv-python==4.11.0.86",
    "matplotlib",
    "pyyaml",
    "networkx",
    "h5py",
    "natsort",
    "spatialmath-python",
    "torch>=2.1",
    "torchvision>=0.16",
    "kornia",
    "einops",
    "ultralytics",
]

[project.optional-dependencies]
habitat-lab = [
    "habitat-lab==0.2.4.dev20230403",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src", "third_party"]